--- a/app/index.html
+++ b/app/index.html
@@ -7,8 +7,8 @@
   <base href="/">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Ethereum Block Explorer</title>
-  <meta name="description" content="An Ethereum (ETH) Block Explorer">
+  <title>IoT Data Block Chain Explorer</title>
+  <meta name="description" content="An IoT Data (LDBC) Block Explorer">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="https://cdn.staticfile.org/bootswatch/3.3.7/darkly/bootstrap.min.css">
@@ -22,7 +22,7 @@
             <span class="sr-only">Toggle navigation</span>
             <i class="fa fa-bars"></i>
         </button>
-        <a class="navbar-brand" href="./#/">ETHER EXPLORER</a>
+        <a class="navbar-brand" href="./#/">IoT Data Block Chain Explorer</a>
     </div>
     <div class="collapse navbar-collapse" id="navbar-collapse-1">
         <ul class="nav navbar-nav">
@@ -37,12 +37,12 @@
 <div ng-view></div>
 
 <!--Libs-->
-  <script src="http://apps.bdimg.com/libs/angular.js/1.4.6/angular.min.js"></script>
+  <script src="https://apps.bdimg.com/libs/angular.js/1.4.6/angular.min.js"></script>
   <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
   <script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
-  <script src="http://apps.bdimg.com/libs/jquery/1.11.3/jquery.min.js"></script>
-  <script src="http://apps.bdimg.com/libs/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  <script src="https://apps.bdimg.com/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="https://apps.bdimg.com/libs/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 <!--Core-->
   <script src="app.js"></script>
 
