--- a/app/index.html
+++ b/app/index.html
@@ -74,9 +74,9 @@
     </div>
 
 
-<div class="footer styledfoot">
+<!--div class="footer styledfoot">
     <footer><a href="http://github.com/lvht">© Haitao Lv</a></footer>
-</div>
+</div-->
 <script>
 //begin AltSheets
 $("#modaltext").text( geth_command );
